@@ -1,4 +1,7 @@
 Version 1.1.2 (?? ??? 2006)
+  - New Features / Enhancements:
+    + Added 'System Log' in menu.  Added logging for adding/editing/deleting
+      users and invalid logins.
 Version 1.1.1 (15 Sep 2006)
   - Fixed the following bug reports on SourceForge:
       1559590: Colors wrong
